Cocoapods経由でSVProgressHUD入れました

--- a/Count5/Base.lproj/Main.storyboard
+++ b/Count5/Base.lproj/Main.storyboard
@@ -61,6 +61,22 @@
                                     <action selector="clear" destination="BYZ-38-t0r" eventType="touchUpInside" id="wuC-1Y-HzX"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WQE-dt-FI2">
+                                <rect key="frame" x="66" y="617" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="show"/>
+                                <connections>
+                                    <action selector="showHUD" destination="BYZ-38-t0r" eventType="touchUpInside" id="cMm-v7-o9H"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgb-qc-mjq">
+                                <rect key="frame" x="266" y="617" width="59" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="dismiss"/>
+                                <connections>
+                                    <action selector="dismissHUD" destination="BYZ-38-t0r" eventType="touchUpInside" id="QCm-bE-yMz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
